--- a/app/src/main/res/layout/activity_class_detail.xml
+++ b/app/src/main/res/layout/activity_class_detail.xml
@@ -153,7 +153,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/textView14"
+                        android:id="@+id/textTopicsContents"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:text="TextView" />
