--- a/app/src/main/res/layout/fragment_class_detail.xml
+++ b/app/src/main/res/layout/fragment_class_detail.xml
@@ -28,26 +28,18 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textDiscipline"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="Select discipline:"
-                android:textColor="@color/colorGray"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-            <TextView
                 android:id="@+id/textSubject"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:text="Subject"
-                android:textSize="16sp" />
+                android:textAlignment="center"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -61,7 +53,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="Select date:"
+                        android:text="Date"
+                        android:textAlignment="center"
                         android:textSize="16sp" />
 
                 </LinearLayout>
@@ -77,7 +70,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="Select hour:"
+                        android:text="Hour"
+                        android:textAlignment="center"
                         android:textSize="16sp" />
 
                 </LinearLayout>
@@ -86,11 +80,11 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="0.1"
                     android:orientation="vertical">
@@ -101,12 +95,13 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:text="Time Duration"
+                        android:textAlignment="center"
                         android:textSize="16sp" />
 
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="0.1"
                     android:orientation="vertical">
@@ -116,11 +111,22 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="Classroom:"
+                        android:text="Classroom"
+                        android:textAlignment="center"
                         android:textSize="16sp" />
 
                 </LinearLayout>
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/textDiscipline"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="discipline"
+                android:textAlignment="center"
+                android:textColor="@color/colorGray"
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/textViewConteudo"
@@ -140,10 +146,10 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/textView14"
+                        android:id="@+id/textTopicsContents"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="TextView" />
+                        android:text="@android:string/fingerprint_icon_content_description" />
                 </LinearLayout>
             </ScrollView>
 
