--- a/app/src/main/res/layout/activity_nav_main.xml
+++ b/app/src/main/res/layout/activity_nav_main.xml
@@ -28,6 +28,37 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_nav_main"
-        app:menu="@menu/activity_nav_main_drawer" />
+        app:menu="@menu/activity_nav_main_drawer" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:gravity="bottom"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="65dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:baselineAlignBottom="false"
+                android:scaleType="fitEnd"
+                app:srcCompat="@drawable/logo_geral" />
+
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_weight="4"
+                android:fontFamily="sans-serif-smallcaps"
+                android:gravity="center|start"
+                android:scrollbarAlwaysDrawHorizontalTrack="false"
+                android:scrollbarAlwaysDrawVerticalTrack="false"
+                android:text="ACADEMIC PLANNER"
+                android:textAlignment="gravity" />
+        </LinearLayout>
+    </com.google.android.material.navigation.NavigationView>
 
 </androidx.drawerlayout.widget.DrawerLayout>
