--- a/app/src/main/res/layout/activity_send_email.xml
+++ b/app/src/main/res/layout/activity_send_email.xml
@@ -34,13 +34,10 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/txtStudentsFrom"
+                android:id="@+id/textView5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Please, select discipline to get emails addresses from students"
-                android:textAlignment="center"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:text="Please, select a discipline:" />
 
             <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                 android:id="@+id/spinnerDisciplines"
@@ -62,24 +59,29 @@
 
                 <TextView
                     android:id="@+id/textAllStudents"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="All Students" />
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1.5"
+                    android:paddingRight="2dp"
+                    android:text="All Students"
+                    android:textAlignment="textEnd" />
 
                 <Switch
                     android:id="@+id/switchStdOrDlgt"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textAlignment="center" />
+                    android:layout_height="match_parent"
+                    android:layout_weight="0"
+                    android:textAlignment="center"
+                    android:textOff="0"
+                    android:textOn="1" />
 
                 <TextView
                     android:id="@+id/textView9"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Delegates" />
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1.5"
+                    android:text="Delegates"
+                    android:textAlignment="textStart" />
             </LinearLayout>
 
             <TextView
@@ -118,7 +120,8 @@
                 android:id="@+id/buttonSend"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Send" />
+                android:text="Send"
+                android:theme="@style/botaoPadraoBrown"/>
         </LinearLayout>
 
     </FrameLayout>
