--- a/app/src/main/res/layout/content_nav_main.xml
+++ b/app/src/main/res/layout/content_nav_main.xml
@@ -11,6 +11,7 @@
     android:orientation="vertical">
 
     <FrameLayout
+        android:id="@+id/FrameNavMain"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="bottom|end"
